fix sound button z-index

--- a/src/styles/interface.css
+++ b/src/styles/interface.css
@@ -32,6 +32,14 @@
   z-index: 2;
 }
 
+#intro-screen {
+  z-index: 3;
+}
+
+#gameover-screen {
+  z-index: 2;
+}
+
 #settings {
   background: #f283c0;
   border-radius: 50%;
